# quantumcrew-mail

./: Dockerfile  pyproject.toml
src/mcp_gsuite/: calendar.py  gauth.py  gmail.py  server.py  toolhandler.py  tools_gmail.py
